--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 1.2em 3em;
-  font-family: "Cambria", "Cochin", "Georgia", "Times", "Times New Roman", serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Header */
